--- a/style.css
+++ b/style.css
@@ -20,10 +20,10 @@
 	margin: -15px;
 }
 
-.googlemid {
+.google {
 	display: block;
 	margin: auto;
-	width: 30%;
+	width: 18%;
 	margin-top: 20vh;
 }
 
@@ -44,7 +44,7 @@ a:visited {
 	padding: 15px 25px;
 }
 .searchbar input {
-	width: 70%;
+	width: 40%;
 	padding: 10px;
 	border: #ddd 1px solid;
 	border-radius: 100px;
